# Numerical-Methods-in-Fortran

./: .gitignore  Algorithms.md  CMakeLists.txt  Distributions.md  Makefile  Numerical-Methods-in-Fortran.sln  README.md
.github/workflows/: main.yml
ExampleApplication/: ExampleApplication.ftn95p  link.lst  main.f95  main_plot.f90  main_random.f90
src/: Assert.f90  Commons.f90  Constants.f90  Distr.f90  Distributions.f90  IO.f90  Interpolation.f90  LinearAlgebra.f90  Logging.f90  Plots.f90  Polynomials.f90  Random.f90  RootFinding.f90  Testing.f90  Utils.f90  main.f90  main_plot.f90  main_random.f90
